--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 server.port=8080
 
+#mybatis
+mybatis.mapper-locations=classpath:cn/yd/carrentalsystem/mapper/*.xml
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://59.110.219.21:3306/carrental?userUnicode=true&characterEncoding=utf8&userSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
