--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8080
-
 #mybatis
 mybatis.mapper-locations=classpath:cn/yd/carrentalsystem/mapper/*.xml
 
@@ -9,4 +8,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.mvc.view.prefix=/
-spring.mvc.view.suffix=.html
+spring.mvc.view.suffix=.jsp
+
