--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+
 #mybatis
 mybatis.mapper-locations=classpath:cn/yd/carrentalsystem/mapper/*.xml
 
@@ -7,6 +8,6 @@ spring.datasource.url=jdbc:mysql://59.110.219.21:3306/carrental?userUnicode=true
 spring.datasource.username=root
 spring.datasource.password=123456
 
-spring.mvc.view.prefix=/
+spring.mvc.view.prefix=/jsp/
 spring.mvc.view.suffix=.jsp
 
