--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=123456
 spring.mvc.view.prefix=/jsp/
 spring.mvc.view.suffix=.jsp
 
+logging.level.cn.yd.carrentalsystem.mapper=debug
+
