--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!--beanutils-->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
+        </dependency>
     </dependencies>
 
     <build>
