--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-
+            <version>5.1.38</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
