--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 #mybatis
 mybatis.mapper-locations=classpath:cn/yd/carrentalsystem/mapper/*.xml
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://59.110.219.21:3306/carrental?userUnicode=true&characterEncoding=utf8&userSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
